--- a/x11-drivers/nvidia-drivers/ChangeLog
+++ b/x11-drivers/nvidia-drivers/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.407 2012/11/14 19:44:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.408 2012/11/18 05:14:10 cardoe Exp $
+
+  18 Nov 2012; Doug Goldstein <cardoe@gentoo.org>
+  -nvidia-drivers-302.17-r1.ebuild, -nvidia-drivers-304.37-r1.ebuild,
+  -nvidia-drivers-304.43.ebuild, -nvidia-drivers-304.48.ebuild,
+  -nvidia-drivers-304.51.ebuild:
+  Remove older versions
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> nvidia-drivers-96.43.23.ebuild:
   stable for amd64, wrt to bug #438246
