--- a/x11-drivers/nvidia-drivers/ChangeLog
+++ b/x11-drivers/nvidia-drivers/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-drivers/nvidia-drivers
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.408 2012/11/18 05:14:10 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-drivers/nvidia-drivers/ChangeLog,v 1.409 2012/11/18 05:15:42 cardoe Exp $
+
+  18 Nov 2012; Doug Goldstein <cardoe@gentoo.org> nvidia-drivers-295.75.ebuild:
+  Stabilize on x86 based on a user report in bug #435700 since x86 is falling
+  way behind.
 
   18 Nov 2012; Doug Goldstein <cardoe@gentoo.org>
   -nvidia-drivers-302.17-r1.ebuild, -nvidia-drivers-304.37-r1.ebuild,
