--- a/media-sound/mikmod/ChangeLog
+++ b/media-sound/mikmod/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/mikmod
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/ChangeLog,v 1.17 2012/01/20 12:56:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/mikmod/ChangeLog,v 1.18 2012/11/18 06:06:47 ssuominen Exp $
+
+*mikmod-3.2.2 (18 Nov 2012)
+
+  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +mikmod-3.2.2.ebuild:
+  Version bump.
 
   20 Jan 2012; Agostino Sarubbo <ago@gentoo.org> mikmod-3.2.1.ebuild,
   mikmod-3.2.2_beta1.ebuild:
