--- a/sci-mathematics/agda/ChangeLog
+++ b/sci-mathematics/agda/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-mathematics/agda
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/agda/ChangeLog,v 1.17 2012/09/12 16:10:28 qnikst Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/agda/ChangeLog,v 1.18 2012/11/18 07:01:39 gienah Exp $
+
+*agda-2.3.0.1-r1 (18 Nov 2012)
+
+  18 Nov 2012; Mark Wright <gienah@gentoo.org> +agda-2.3.0.1-r1.ebuild,
+  +files/agda-2.3.0.1-quickcheck-2.5.patch:
+  Thanks to Naohiro Aota for adding patch for agda 2.3.0.1 to build with
+  quickcheck 2.5
 
   12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org> agda-2.3.0.1.ebuild,
   agda-2.3.0.ebuild:
