--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.460 2012/11/16 17:45:13 tommy Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.461 2012/11/18 08:01:15 swift Exp $
+
+  18 Nov 2012; <swift@gentoo.org> package.mask:
+  Preparation for new selinux-logsentry package
 
   16 Nov 2012; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> make.defaults:
   Add ENLIGHTENMENT_MODULES to USE_EXPAND as discussed on gentoo-dev ML
