--- a/profiles/base/ChangeLog
+++ b/profiles/base/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo base-profile
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.461 2012/11/18 08:01:15 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/base/ChangeLog,v 1.462 2012/11/18 08:14:43 swift Exp $
+
+  18 Nov 2012; <swift@gentoo.org> package.mask:
+  Preparing for selinux-makewhatis package
 
   18 Nov 2012; <swift@gentoo.org> package.mask:
   Preparation for new selinux-logsentry package
