--- a/profiles/features/ChangeLog
+++ b/profiles/features/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/AMD64 profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/features/ChangeLog,v 1.52 2012/11/18 08:14:43 swift Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/features/ChangeLog,v 1.53 2012/11/18 09:25:48 swift Exp $
+
+  18 Nov 2012; <swift@gentoo.org> selinux/package.mask:
+  Remove mask towards very old kernel sources
 
   18 Nov 2012; <swift@gentoo.org> selinux/package.mask:
   Preparing for selinux-makewhatis package
