--- a/app-laptop/radeontool/ChangeLog
+++ b/app-laptop/radeontool/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/radeontool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/radeontool/ChangeLog,v 1.25 2012/03/21 18:42:30 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/radeontool/ChangeLog,v 1.26 2012/11/18 10:51:42 pacho Exp $
+
+  18 Nov 2012; Pacho Ramos <pacho@gentoo.org> -radeontool-1.6.0.ebuild,
+  -radeontool-1.6.1.ebuild, metadata.xml:
+  Drop mobile herd as talked in gentoo-dev ML, remove old.
 
 *radeontool-1.6.3 (21 Mar 2012)
 
