--- a/media-libs/sbc/ChangeLog
+++ b/media-libs/sbc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/sbc
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/sbc/ChangeLog,v 1.3 2012/11/16 12:39:27 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/sbc/ChangeLog,v 1.4 2012/11/18 10:57:41 pacho Exp $
+
+  18 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
+  Drop mobile herd as talked in gentoo-dev ML
 
   16 Nov 2012; Anthony G. Basile <blueness@gentoo.org> sbc-1.0.ebuild:
   keyword ~ppc ~ppc64, bug #442932
