--- a/net-wireless/gnome-bluetooth/ChangeLog
+++ b/net-wireless/gnome-bluetooth/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for net-wireless/gnome-bluetooth
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.117 2012/09/27 20:19:00 tetromino Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/gnome-bluetooth/ChangeLog,v 1.118 2012/11/18 11:15:16 pacho Exp $
+
+  18 Nov 2012; Pacho Ramos <pacho@gentoo.org> -gnome-bluetooth-2.32.0.ebuild,
+  -gnome-bluetooth-3.4.2.ebuild, metadata.xml:
+  Drop mobile herd as talked in gentoo-dev ML, remove old.
 
   27 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
   gnome-bluetooth-2.32.0.ebuild, gnome-bluetooth-2.32.0-r1.ebuild,
