--- a/app-office/libreoffice/ChangeLog
+++ b/app-office/libreoffice/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-office/libreoffice
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.397 2012/11/17 11:09:41 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.398 2012/11/18 11:39:51 dilfridge Exp $
+
+  18 Nov 2012; Andreas K. Huettel <dilfridge@gentoo.org>
+  libreoffice-9999-r2.ebuild:
+  Update branding of lo-4
 
   17 Nov 2012; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-3.6.3.2.ebuild:
   Stable on ppc and x86 wrt bug#440922.
