--- a/net-wireless/bluez-hcidump/ChangeLog
+++ b/net-wireless/bluez-hcidump/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/bluez-hcidump
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-hcidump/ChangeLog,v 1.76 2012/11/18 11:09:12 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/bluez-hcidump/ChangeLog,v 1.77 2012/11/18 12:09:13 ssuominen Exp $
+
+  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> metadata.xml:
+  Remove pda@ because this isn't exactly related to PDAs.
 
   18 Nov 2012; Pacho Ramos <pacho@gentoo.org> -bluez-hcidump-2.0.ebuild,
   -bluez-hcidump-2.2.ebuild, -bluez-hcidump-2.3.ebuild,
