--- a/sys-power/acpid/ChangeLog
+++ b/sys-power/acpid/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-power/acpid
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-power/acpid/ChangeLog,v 1.94 2012/11/18 13:29:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-power/acpid/ChangeLog,v 1.95 2012/11/18 13:29:52 ago Exp $
+
+  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> acpid-2.0.17.ebuild:
+  Stable for x86, wrt bug #434522
 
   18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> acpid-2.0.17.ebuild:
   Stable for amd64, wrt bug #434522
