--- a/sys-apps/newrelic-sysmond/ChangeLog
+++ b/sys-apps/newrelic-sysmond/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/newrelic-sysmond
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/newrelic-sysmond/ChangeLog,v 1.5 2012/11/18 10:31:05 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/newrelic-sysmond/ChangeLog,v 1.6 2012/11/18 13:31:26 ulm Exp $
+
+  18 Nov 2012; Ulrich Müller <ulm@gentoo.org>
+  newrelic-sysmond-1.1.2.124.ebuild:
+  Fix LICENSE, see LICENSE.txt in tarball, bug 441936.
 
   18 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
   Drop maintainer as he is not taking care of this package.
