--- a/dev-haskell/monadcatchio-mtl/ChangeLog
+++ b/dev-haskell/monadcatchio-mtl/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-haskell/monadcatchio-mtl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/ChangeLog,v 1.2 2012/09/12 15:41:37 qnikst Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/monadcatchio-mtl/ChangeLog,v 1.3 2012/11/18 13:53:48 gienah Exp $
+
+*monadcatchio-mtl-0.3.0.5 (18 Nov 2012)
+
+  18 Nov 2012; Mark Wright <gienah@gentoo.org> +monadcatchio-mtl-0.3.0.5.ebuild:
+  Bump monadcatchio-mtl to 0.3.0.5
 
   12 Sep 2012; Alexander Vershilov <qnikst@gentoo.org>
   monadcatchio-mtl-0.3.0.4.ebuild:
