--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7160 2012/11/18 11:40:42 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.7161 2012/11/18 13:55:01 kensington Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Nov 2012; Michael Palimaka <kensington@gentoo.org> package.mask:
+  Remove mask on net-libs/libwww - package removed wrt bug #320253.
 
   18 Nov 2012; Markos Chandras <hwoarang@gentoo.org> package.mask:
   dev-vcs/svk is gone
