--- a/app-laptop/radeontool/ChangeLog
+++ b/app-laptop/radeontool/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-laptop/radeontool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-laptop/radeontool/ChangeLog,v 1.28 2012/11/18 14:00:26 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-laptop/radeontool/ChangeLog,v 1.29 2012/11/18 14:09:16 ago Exp $
+
+  18 Nov 2012; Agostino Sarubbo <ago@gentoo.org> radeontool-1.6.3.ebuild:
+  Stable for amd64, wrt bug #329959
 
   18 Nov 2012; Pacho Ramos <pacho@gentoo.org> radeontool-1.6.3.ebuild:
   Add missing dep, bug 409421
