--- a/net-misc/usbip/ChangeLog
+++ b/net-misc/usbip/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/usbip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.2 2012/05/05 03:20:43 jdhore Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.3 2012/11/18 14:25:38 ssuominen Exp $
+
+*usbip-3.6 (18 Nov 2012)
+
+  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +usbip-3.6.ebuild:
+  Version bump wrt #395871 by Salah Coronya
 
   05 May 2012; Jeff Horelick <jdhore@gentoo.org> usbip-0.1.7.ebuild:
   dev-util/pkgconfig -> virtual/pkgconfig
