--- a/net-misc/usbip/ChangeLog
+++ b/net-misc/usbip/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/usbip
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.3 2012/11/18 14:25:38 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/usbip/ChangeLog,v 1.4 2012/11/18 14:26:22 ssuominen Exp $
+
+  18 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -usbip-0.1.7.ebuild:
+  old
 
 *usbip-3.6 (18 Nov 2012)
 
