--- a/app-portage/layman/ChangeLog
+++ b/app-portage/layman/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.163 2012/11/19 00:13:18 dolsen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.164 2012/11/19 01:43:39 dolsen Exp $
+
+*layman-2.0.0_rc5 (19 Nov 2012)
+
+  19 Nov 2012; Brian Dolbec <dolsen@gentoo.org> -layman-2.0.0_rc4.ebuild,
+  +layman-2.0.0_rc5.ebuild:
+  Version bump fixes bug 442422, bug 440628, bug 433687, bug 384091, bug
+  390127, bug 372583, bug 408897, bug 384085. Everything short of the
+  gpg support code changes. Some of these bugs fixes were in rc4.
 
   19 Nov 2012; Brian Dolbec <dolsen@gentoo.org> layman-9999.ebuild,
   metadata.xml:
