--- a/dev-python/pyGPG/ChangeLog
+++ b/dev-python/pyGPG/ChangeLog
@@ -1,10 +1,12 @@
 # ChangeLog for dev-python/pyGPG
 # Copyright 2012-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyGPG/ChangeLog,v 1.1 2012/11/19 02:40:13 dolsen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyGPG/ChangeLog,v 1.2 2012/11/19 02:42:15 dolsen Exp $
+
+  19 Nov 2012; Brian Dolbec <dolsen@gentoo.org> pyGPG-9999.ebuild:
+  fix an errant space in the ebuild.
 
 *pyGPG-9999 (18 Nov 2012)
 
   18 Nov 2012; Brian Dolbec <dolsen@gentoo.org> +pyGPG-9999.ebuild,
   +metadata.xml:
   Initial ebuild for pyGPG, written by me.
-
