--- a/app-portage/layman/ChangeLog
+++ b/app-portage/layman/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.164 2012/11/19 01:43:39 dolsen Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.165 2012/11/19 02:45:55 dolsen Exp $
+
+  19 Nov 2012; Brian Dolbec <dolsen@gentoo.org> layman-9999.ebuild:
+  fix the pyGPG dep to the correct category.
 
 *layman-2.0.0_rc5 (19 Nov 2012)
 
