--- a/mail-client/roundcube/ChangeLog
+++ b/mail-client/roundcube/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/roundcube
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.91 2012/11/21 22:32:38 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-client/roundcube/ChangeLog,v 1.92 2012/11/29 16:20:08 ago Exp $
+
+  29 Nov 2012; <ago@gentoo.org> roundcube-0.8.1.ebuild:
+  Stable for ppc, wrt bug #434378
 
 *roundcube-0.8.4 (21 Nov 2012)
 
