--- a/dev-libs/cyrus-sasl/ChangeLog
+++ b/dev-libs/cyrus-sasl/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/cyrus-sasl
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.247 2012/11/05 21:56:02 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/cyrus-sasl/ChangeLog,v 1.248 2012/11/29 16:20:13 jer Exp $
+
+  29 Nov 2012; Jeroen Roovers <jer@gentoo.org> cyrus-sasl-2.1.25-r3.ebuild:
+  Stable for HPPA (bug #445208).
 
   05 Nov 2012; Eray Aslan <eras@gentoo.org> cyrus-sasl-2.1.23-r6.ebuild,
   cyrus-sasl-2.1.25-r1.ebuild, cyrus-sasl-2.1.25-r2.ebuild,
