--- a/dev-libs/openct/ChangeLog
+++ b/dev-libs/openct/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/openct
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/openct/ChangeLog,v 1.101 2012/11/29 16:09:33 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/openct/ChangeLog,v 1.102 2012/11/29 16:24:23 jer Exp $
+
+  29 Nov 2012; Jeroen Roovers <jer@gentoo.org> openct-0.6.20-r3.ebuild:
+  Stable for HPPA (bug #418765).
 
   29 Nov 2012; <ago@gentoo.org> openct-0.6.20-r3.ebuild:
   Stable for amd64, wrt bug #418765
