--- a/sys-devel/gdb/ChangeLog
+++ b/sys-devel/gdb/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.217 2012/11/28 16:19:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.218 2012/11/29 16:28:07 jer Exp $
+
+  29 Nov 2012; Jeroen Roovers <jer@gentoo.org> gdb-7.5.ebuild:
+  Stable for HPPA (bug #444902).
 
   28 Nov 2012;  <ago@gentoo.org> gdb-7.5.ebuild:
   Stable for amd64, wrt bug #444902
