--- a/sci-libs/shapelib/ChangeLog
+++ b/sci-libs/shapelib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-libs/shapelib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.21 2012/11/23 11:10:07 naota Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.22 2012/11/29 16:58:40 ago Exp $
+
+  29 Nov 2012; <ago@gentoo.org> shapelib-1.3.0-r1.ebuild:
+  Stable for ppc, wrt bug #444664
 
   23 Nov 2012;  <naota@gentoo.org> shapelib-1.3.0-r1.ebuild:
   Add ~x86-fbsd wrt bug #444060
