--- a/net-libs/c-client/ChangeLog
+++ b/net-libs/c-client/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/c-client
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/c-client/ChangeLog,v 1.97 2012/11/29 16:09:55 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/c-client/ChangeLog,v 1.98 2012/11/29 20:45:39 ranger Exp $
+
+  29 Nov 2012; Brent Baude <ranger@gentoo.org> c-client-2007f-r4.ebuild:
+  Marking c-client-2007f-r4 ppc for bug 445063
 
   29 Nov 2012; <ago@gentoo.org> c-client-2007f-r4.ebuild:
   Stable for amd64, wrt bug #445063
