--- a/sci-libs/shapelib/ChangeLog
+++ b/sci-libs/shapelib/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-libs/shapelib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.22 2012/11/29 16:58:40 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/shapelib/ChangeLog,v 1.23 2012/11/29 21:00:14 jlec Exp $
+
+  29 Nov 2012; Justin Lecher <jlec@gentoo.org> shapelib-1.3.0-r1.ebuild,
+  files/shapelib-1.3.0-respect-user.patch, metadata.xml:
+  Respect AR, #444548
 
   29 Nov 2012; <ago@gentoo.org> shapelib-1.3.0-r1.ebuild:
   Stable for ppc, wrt bug #444664
