--- a/sys-kernel/aufs-sources/ChangeLog
+++ b/sys-kernel/aufs-sources/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-kernel/aufs-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.3 2012/11/29 22:04:44 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/aufs-sources/ChangeLog,v 1.4 2012/11/29 22:17:37 jlec Exp $
+
+  29 Nov 2012; Justin Lecher <jlec@gentoo.org> aufs-sources-3.6.8.ebuild:
+  Revert installation position of header file
 
   29 Nov 2012; Justin Lecher <jlec@gentoo.org> aufs-sources-3.6.8.ebuild,
   metadata.xml:
