--- a/sys-kernel/hardened-sources/ChangeLog
+++ b/sys-kernel/hardened-sources/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/hardened-sources
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.733 2012/11/29 23:02:41 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/hardened-sources/ChangeLog,v 1.734 2012/11/29 23:03:57 blueness Exp $
+
+*hardened-sources-3.2.34-r2 (29 Nov 2012)
+
+  29 Nov 2012; Anthony G. Basile <blueness@gentoo.org>
+  +hardened-sources-3.2.34-r2.ebuild:
+  vanilla-3.2.34 + genpatches-3.2-16 + grsecurity-2.9.1-3.2.34-201211251859
 
 *hardened-sources-2.6.32-r142 (29 Nov 2012)
 
