--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,20 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1137 2012/11/16 11:50:25 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1138 2012/11/29 23:39:26 zmedico Exp $
+
+*portage-2.1.11.32 (29 Nov 2012)
+
+  29 Nov 2012; Zac Medico <zmedico@gentoo.org> +portage-2.1.11.32.ebuild:
+  2.1.11.32 version bump. This fixes bug #367215 (package moves should not cause
+  a package to block itself), bug #421099 (parallel strip issues with
+  hardlinks), bug #434942 (obsolete eclass-overrides information in portage.5),
+  bug #440680 (repoman deprecation warning for boost-utils.eclass), bug #440982
+  (new emerge --quiet-fail option), bug #441948 (handle permission exceptions
+  when writing elog logs), bug #442190 (fix emerge-webrsync to apply
+  portage:portage ownership), bug #442536 (keep temp dir after pkg_pretend
+  failure), bug #442786 (repoman validate metadata.xml use restriction atoms),
+  and bug #444596 (make emerge --info fail for unmatched atoms). Bug #445274
+  tracks all bugs fixed since portage-2.1.11.31.
 
   16 Nov 2012; Agostino Sarubbo <ago@gentoo.org> portage-2.1.11.31.ebuild:
   Stable for X86, wrt bug #440852
