--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/portage
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1138 2012/11/29 23:39:26 zmedico Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/portage/ChangeLog,v 1.1139 2012/11/29 23:41:13 zmedico Exp $
+
+*portage-2.2.0_alpha143 (29 Nov 2012)
+
+  29 Nov 2012; Zac Medico <zmedico@gentoo.org> +portage-2.2.0_alpha143.ebuild,
+  -portage-2.2.0_alpha120.ebuild:
+  2.2.0_alpha143 version bump. This includes all of the fixes in 2.1.11.32. Bug
+  #210077 tracks all bugs fixed since portage-2.1.x.
 
 *portage-2.1.11.32 (29 Nov 2012)
 
