--- a/media-gfx/splashutils/ChangeLog
+++ b/media-gfx/splashutils/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/splashutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.205 2012/10/28 16:20:50 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.206 2012/11/30 01:22:46 xmw Exp $
+
+*splashutils-1.5.4.4-r3 (30 Nov 2012)
+
+  30 Nov 2012; Michael Weber <xmw@gentoo.org> +splashutils-1.5.4.4-r3.ebuild,
+  +files/splashutils-1.5.4.4-r3-bzip2.patch:
+  Revbump to add -lbz2 to libfbsplashrender.pc (bug 408283)
 
   28 Oct 2012; Markos Chandras <hwoarang@gentoo.org>
   splashutils-1.5.4.4-r1.ebuild:
