--- a/media-gfx/splashutils/ChangeLog
+++ b/media-gfx/splashutils/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/splashutils
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.206 2012/11/30 01:22:46 xmw Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/splashutils/ChangeLog,v 1.207 2012/11/30 01:44:14 xmw Exp $
+
+  30 Nov 2012; Michael Weber <xmw@gentoo.org> -splashutils-1.5.4.4-r3.ebuild:
+  Remove broken version
 
 *splashutils-1.5.4.4-r3 (30 Nov 2012)
 
