--- a/sci-visualization/gwyddion/ChangeLog
+++ b/sci-visualization/gwyddion/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sci-visualization/gwyddion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gwyddion/ChangeLog,v 1.40 2012/11/14 13:34:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gwyddion/ChangeLog,v 1.41 2012/11/30 05:29:17 bicatali Exp $
+
+  30 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> -gwyddion-2.28.ebuild,
+  gwyddion-2.29.ebuild:
+  Verbose build log (bug #443084)
 
   14 Nov 2012; Agostino Sarubbo <ago@gentoo.org> gwyddion-2.29.ebuild:
   Stable for amd64, wrt bug #442060
