--- a/sci-visualization/gwyddion/ChangeLog
+++ b/sci-visualization/gwyddion/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sci-visualization/gwyddion
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gwyddion/ChangeLog,v 1.41 2012/11/30 05:29:17 bicatali Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-visualization/gwyddion/ChangeLog,v 1.42 2012/11/30 05:51:57 bicatali Exp $
+
+*gwyddion-2.30 (30 Nov 2012)
+
+  30 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> +gwyddion-2.30.ebuild:
+  Version bump
 
   30 Nov 2012; Sébastien Fabbro <bicatali@gentoo.org> -gwyddion-2.28.ebuild,
   gwyddion-2.29.ebuild:
