--- a/dev-libs/libotf/ChangeLog
+++ b/dev-libs/libotf/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libotf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.51 2012/11/14 14:13:40 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.52 2012/11/30 05:58:39 ssuominen Exp $
+
+*libotf-0.9.13 (30 Nov 2012)
+
+  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> +libotf-0.9.13.ebuild,
+  +files/libotf-0.9.13-build.patch:
+  Version bump wrt #439900 by James Cloos
 
   14 Nov 2012; Justin Lecher <jlec@gentoo.org> libotf-0.9.9.ebuild:
   Keyworded for ~linux, tested by me
