--- a/dev-libs/libotf/ChangeLog
+++ b/dev-libs/libotf/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/libotf
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.52 2012/11/30 05:58:39 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libotf/ChangeLog,v 1.53 2012/11/30 06:00:48 ssuominen Exp $
+
+  30 Nov 2012; Samuli Suominen <ssuominen@gentoo.org> -libotf-0.9.9.ebuild,
+  -libotf-0.9.12.ebuild:
+  old
 
 *libotf-0.9.13 (30 Nov 2012)
 
