--- a/sci-mathematics/ggnfs/ChangeLog
+++ b/sci-mathematics/ggnfs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sci-mathematics/ggnfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/ggnfs/ChangeLog,v 1.2 2012/11/28 09:41:34 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/ggnfs/ChangeLog,v 1.3 2012/11/30 06:36:46 patrick Exp $
+
+*ggnfs-0.77.1-r1 (30 Nov 2012)
+
+  30 Nov 2012; Patrick Lauer <patrick@gentoo.org> +ggnfs-0.77.1-r1.ebuild,
+  -ggnfs-0.77.1.ebuild:
+  Adding default parameter list file
 
   28 Nov 2012; Patrick Lauer <patrick@gentoo.org> ggnfs-0.77.1.ebuild:
   Avoid parallel make failure
