--- a/media-gfx/povray/ChangeLog
+++ b/media-gfx/povray/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-gfx/povray
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.134 2012/11/21 17:58:37 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/povray/ChangeLog,v 1.135 2012/11/30 06:53:12 lavajoe Exp $
+
+  30 Nov 2012; Joe Peterson <lavajoe@gentoo.org> metadata.xml:
+  Reassign to maintainer-needed
 
   21 Nov 2012; Jeroen Roovers <jer@gentoo.org> povray-3.7.0_rc5-r1.ebuild:
   Marked ~hppa (bug #442472).
