--- a/sci-mathematics/ggnfs/ChangeLog
+++ b/sci-mathematics/ggnfs/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sci-mathematics/ggnfs
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/ggnfs/ChangeLog,v 1.3 2012/11/30 06:36:46 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/ggnfs/ChangeLog,v 1.4 2012/11/30 06:54:59 patrick Exp $
+
+  30 Nov 2012; Patrick Lauer <patrick@gentoo.org> ggnfs-0.77.1-r1.ebuild:
+  Adding another default parameter list file
 
 *ggnfs-0.77.1-r1 (30 Nov 2012)
 
