--- a/dev-libs/libverto/ChangeLog
+++ b/dev-libs/libverto/ChangeLog
@@ -1,10 +1,10 @@
 # ChangeLog for dev-libs/libverto
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libverto/ChangeLog,v 1.7 2012/11/30 08:09:46 eras Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libverto/ChangeLog,v 1.8 2012/11/30 08:11:28 eras Exp $
 
   30 Nov 2012; Eray Aslan <eras@gentoo.org> libverto-0.2.4.ebuild,
   libverto-0.2.5.ebuild:
-  Licese as-is -> MIT - bug #445256
+  License as-is -> MIT - bug #445256
 
 *libverto-0.2.5 (20 Oct 2012)
 
