--- a/sci-mathematics/msieve/ChangeLog
+++ b/sci-mathematics/msieve/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sci-mathematics/msieve
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.7 2012/11/28 08:15:02 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-mathematics/msieve/ChangeLog,v 1.8 2012/11/30 08:52:07 patrick Exp $
+
+*msieve-1.50-r4 (30 Nov 2012)
+
+  30 Nov 2012; Patrick Lauer <patrick@gentoo.org> +files/fix-version.patch,
+  +files/fix-version2.patch, +msieve-1.50-r4.ebuild, -msieve-1.50-r1.ebuild,
+  -msieve-1.50-r2.ebuild, -msieve-1.50-r3.ebuild, -msieve-1.50.ebuild:
+  Fix displayed versioning
 
   28 Nov 2012; Patrick Lauer <patrick@gentoo.org> msieve-1.50-r3.ebuild:
   Removing erroneous dep
